RESOLVED FIXED236887
macCatalyst: WKWebView crashes whenever the view frame changes
https://bugs.webkit.org/show_bug.cgi?id=236887
Summary macCatalyst: WKWebView crashes whenever the view frame changes
Tim Horton
Reported 2022-02-19 11:42:47 PST
macCatalyst: WKWebView crashes whenever the view frame changes
Attachments
Patch (1.41 KB, patch)
2022-02-19 11:43 PST, Tim Horton
no flags
Tim Horton
Comment 1 2022-02-19 11:43:33 PST
Tim Horton
Comment 2 2022-02-19 11:43:36 PST
EWS
Comment 3 2022-02-19 17:43:37 PST
Committed r290219 (247545@main): <https://commits.webkit.org/247545@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 452647 [details].
Note You need to log in before you can comment on or make changes to this bug.