macCatalyst: WKWebView crashes whenever the view frame changes https://bugs.webkit.org/show_bug.cgi?id=236887 <rdar://problem/89182039>

Reviewed by Chris Dumez.

* UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _acquireResizeAssertionForReason:]):
Add a respondsToSelector check.



Canonical link: https://commits.webkit.org/247545@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290219 268f45cc-cd09-0410-ab3c-d52691b4dbfc